--- a/RESTServlets/.classpath
+++ b/RESTServlets/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="/Users/arkaitz/workspace/Java/ejercicios-java/RESTServlets/WebContent/WEB-INF/lib/gson-2.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/arkaitz/workspace/Java/ejercicios-java/RESTServlets/WebContent/WEB-INF/lib/mysql-connector-java-5.1.34-bin.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 6 [1.6.0_65-b14-462]">
 		<attributes>
@@ -13,7 +15,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="/Users/arkaitz/workspace/Java/ejercicios-java/JDBC/extra/mysql-connector-java-5.1.34-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
